Day-2/Traffic Management/Request Routing/virtual-service-reviews-test-v2.yaml
# vim samples/bookinfo/networking/virtual-service-reviews-test-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1

# kubectl apply -f samples/bookinfo/networking/virtual-service-reviews-test-v2.yaml

# kubectl get virtualservice reviews -o yaml

# kubectl delete -f samples/bookinfo/networking/virtual-service-all-v1.yaml
